...
  <string name="delete_note_confirm_dialog_msg">Delete this note?</string>
  <string name="delete_note_confirm_bt_ok">Delete</string>
  <string name="delete_note_confirm_bt_cancel">Cancel</string>
  <string name="notelist">Note list</string>
  <string name="osm_note_bt_upload">Upload as OSM note</string>
  <!--Menu-->
  <string name="menu_settings">Settings</string>
  <string name="menu_waypointlist">Waypoints</string>
  <string name="menu_about">About</string>
  <string name="menu_displaytrack">Display track</string>
  <string name="menu_stoptracking">Stop &amp; save</string>
  <string name="menu_newtrack">New track</string>
  <string name="menu_deletetracks">Delete all tracks</string>
...
  <string name="buttons_presets_icon_directory_does_not_exist">This file didn\'t have any icon directory associated</string>
  <string name="buttons_presets_unsuccessful_delete">The layout could not be deleted</string>
  <!--Available Layouts messages-->
  <string name="available_layouts_connection_error">Error: unable to connect to the Internet</string>
  <string name="available_layouts_response_null_exception">Error: unable to connect to the default custom layouts repository</string>
  <string name="available_layouts_connecting_message">(Connecting…)</string>
  <string name="available_layouts_description_dialog_positive_confirmation">Download</string>
  <string name="available_layouts_not_available_language">Your language is not available select one from the list</string>
  <string name="available_layouts_language_dialog_title">Available Languages</string>
  <string name="available_layouts_checking_language_dialog">Checking local language versions</string>
  <string name="available_layouts_downloading_dialog">Downloading…</string>
  <string name="available_layouts_successful_download">The layout was downloaded successfully</string>
  <string name="available_layouts_unsuccessful_download">The layout can\'t be downloaded, try again later</string>
  <string name="available_layouts_null_response_received">Error retrieving data from server</string>
  <!--Github Repository Settings-->
  <string name="github_repository_settings_default_checkbox">Default</string>
  <string name="github_repository_settings_custom_checkbox">Custom</string>
  <string name="github_repository_settings_username">Github username: </string>
...
