<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/launch_available"
        android:icon="@android:drawable/ic_input_add"
        android:showAsAction="always"
        android:title="@string/prefs_ui_available_layout"
        android:visible="true" />
</menu>