...
			android:summary="@string/prefs_ui_picture_source_summary" android:entries="@array/prefs_ui_picture_source_keys" android:entryValues="@array/prefs_ui_picture_source_values"></ListPreference>
		<CheckBoxPreference android:key="ui.display_keep_on" android:title="@string/prefs_display_always_on"
			android:summary="@string/prefs_display_always_on_summary" android:defaultValue="true"></CheckBoxPreference>
		<ListPreference android:entries="@array/prefs_theme_keys" android:title="@string/prefs_theme"
			android:entryValues="@array/prefs_theme_values" android:key="ui.theme" android:summary="@string/prefs_theme_summary" android:defaultValue="@style/DefaultTheme"></ListPreference>

		<ListPreference android:defaultValue="default" android:key="ui.buttons.layout" android:title="@string/prefs_ui_buttons_layout"
			android:summary="@string/prefs_ui_buttons_layout_summary"></ListPreference>
		<CheckBoxPreference android:key="ui.displaytrack.osm" android:title="@string/prefs_displaytrack_osm"
			android:summary="@string/prefs_displaytrack_osm_summary" android:defaultValue="false"></CheckBoxPreference>
		<ListPreference android:entries="@array/prefs_map_tile_keys" android:title="@string/prefs_map_tile"
			android:entryValues="@array/prefs_map_tile_values" android:key="ui.map.tile" android:summary="@string/prefs_map_tile_summary" android:defaultValue="MAPNIK"></ListPreference>
		<ListPreference android:defaultValue="none" android:key="ui.orientation" android:title="@string/prefs_ui_orientation"
...
