...
		<TextView android:layout_height="wrap_content"
			android:text="{y}" android:id="@+id/trackmgr_item_tps" android:layout_below="@id/trackmgr_item_nameordate"
			android:layout_toRightOf="@id/trackmgr_item_trackpoints" style="@android:style/TextAppearance.Small" android:layout_width="wrap_content"></TextView>
				
	</RelativeLayout>
	
	<ImageView android:id="@+id/trackmgr_item_statusicon"
		android:layout_height="fill_parent" android:layout_width="wrap_content"
		android:src="@android:drawable/presence_online"
		android:paddingLeft="3dp"
		android:layout_marginRight="3dp"
		android:layout_gravity="center_horizontal|center_vertical"
		android:paddingRight="3dp"
...
